fix collapse bug

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ form input{
 }
 
 .places{
-    height: 100vh;
 }
 
 .placesResult{
